# minimal-snake

./: CMakeLists.txt  README.md  snake.571.cpp  snake.571.min.cpp  snake.cpp  snake.min.cpp
